go to https://github.com/aanoaa/p5-hubot/issues for the roadmap and known issues.
# git shortlog --no-merges develop --not <tag>
    - [tweet] parse `\n`

0.2.7    Mon Jul 21 13:36:17 2014 KST
    - fix uninitialized value of msg

0.2.6    Mon Apr 28 22:29:56 2014 KST
    - use env variable HUBOT_HTTPD_ADDRESS to specify the listen address

0.2.5    Fri Feb 14 01:30:56 2014 KST
    - keep simple dist.ini and using cpanfile
    - perltidy all

0.2.4    Fri Nov 29 19:27:09 2013 KST
    - [shorten] pretty title to unescape tags
    - save user ip address if available

0.2.3    Sun Jun 23 22:31:42 2013 KST
    - use twitter api v1.1 for `tweet` script
    - requires `AnyEvent::HTTP::ScopedClient` 0.0.5 or later

0.2.2    Fri Jun 14 23:23:28 2013 KST
    - [tweet] - twitter api v1 is no longer available
      (skip test and prevent installation fail)

0.2.1    Mon Jun 10 11:10:15 2013 KST
    - fix heroku ping interval - cause too long
    - fix bug - creator didn't copying `lib/*` files

0.2.0    Mon Jun 10 02:20:32 2013 KST
    - add `hubot --create` option for building deployable package
    - deploy hubot onto heroku easily

0.1.10    Sat Jun  8 16:39:20 2013 KST
    - robot will respond to `/part` and `/quit` on IRC
      possible to hooking `leave` on the scripts

0.1.9    Tue May 14 14:06:54 2013 KST
    - robot can adding callback for `notice` like `hear`
    - support NickServ identify
    - catch `330` and `MODE` COMMANDS in Irc Adapter
    - missing meta->make_immutable

0.1.8    Tue May  7 13:46:30 2013 KST
    - HOTFIX fix bad test plan

0.1.7    Tue Apr 23 20:23:58 2013 KST
    - delete unused irc connect option and doc
    - [shortcut] replacement charset to 'euckr' instead of 'ksc5601' # WTF
    - [help] COMMAND `hubot commands` is available

0.1.6    Wed Jan 30 12:19:11 2013 KST
    - GH#32 add several IRC connecting options (thanks @yuni)
    - GH#33 check pkg before using `$irc->enable_ssl` (thanks @yuni)

0.1.5    Fri Jan 18 10:48:49 2013 KST